tests/expectations/parser-statement/finalize/finalize_statement_fail.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'finalize'
    --> test_0:1:13
     |
   1 | return then finalize;
     |             ^^^^^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'finalize'
    --> test_1:1:13
     |
   1 | return then finalize();
     |             ^^^^^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'finalize'
    --> test_2:1:13
     |
   1 | return then finalize(foo);
     |             ^^^^^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'finalize'
    --> test_3:1:13
     |
   1 | return then finalize(foo, bar);
     |             ^^^^^^^^
